--- a/calc/templates/calc/calc.html
+++ b/calc/templates/calc/calc.html
@@ -25,21 +25,26 @@
         <button class="calc__btn" type="button">8</button>
         <button class="calc__btn" type="button">9</button>
         <button class="calc__btn calc__btn_operator" type="button">+</button>
+        <button class="calc__btn calc__btn_reset" type="button">AC</button>
 
         <button class="calc__btn" type="button">4</button>
         <button class="calc__btn" type="button">5</button>
         <button class="calc__btn" type="button">6</button>
         <button class="calc__btn calc__btn_operator" type="button">-</button>
+        <button class="calc__btn calc__btn_operator" type="button">(</button>
 
         <button class="calc__btn" type="button">1</button>
         <button class="calc__btn" type="button">2</button>
         <button class="calc__btn" type="button">3</button>
         <button class="calc__btn calc__btn_operator" type="button">*</button>
+        <button class="calc__btn calc__btn_operator" type="button">)</button>
 
         <button class="calc__btn" type="button">0</button>
         <button class="calc__btn" type="button">.</button>
         <button class="calc__btn" type="button">00</button>
         <button class="calc__btn calc__btn_operator" type="button">/</button>
+        <button class="calc__btn calc__btn_operator" type="button">%</button>
+
 
         <button class="calc__btn calc__btn_reset" type="button">C</button>
         <button class="calc__btn calc__btn_equal" type="button">=</button>
